--- a/gzbxnew/src/main/res/layout/fault_repair_commenton.xml
+++ b/gzbxnew/src/main/res/layout/fault_repair_commenton.xml
@@ -5,30 +5,13 @@
     android:background="#ededf1"
     android:orientation="vertical" >
 
-   <LinearLayout
-        android:id="@+id/zwsj"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <com.dk.mp.core.widget.ErrorLayout
+        android:id="@+id/error_layout"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingTop="43dp"
-        android:visibility="gone" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/zwsj_icon"
-            android:layout_width="50dip"
-            android:layout_height="50dip"
-            android:src="@drawable/nodata" />
-
-        <TextView
-            android:id="@+id/zwsj_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
-            android:text="@string/nodata"
-            android:textColor="#c9c9c9"
-            android:textSize="12sp" />
-    </LinearLayout>
+    </com.dk.mp.core.widget.ErrorLayout>
      
     <com.dk.mp.core.view.listview.XListView
         android:id="@+id/listView"
