--- a/sxxj/src/main/res/layout/app_sxxj.xml
+++ b/sxxj/src/main/res/layout/app_sxxj.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#f4f4f4">
 
-    <include layout="@layout/core_title_back"></include>
-
+    <include  android:id="@+id/top" layout="@layout/core_title_back"></include>
+    <LinearLayout
+        android:layout_below="@+id/top"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#f4f4f4">
     <com.dk.mp.core.widget.ErrorLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
@@ -19,4 +24,19 @@
         android:layout_height="match_parent"
         android:scrollbars="none">
         </ListView>
+
 </LinearLayout>
+
+
+    <ImageView
+        android:id="@+id/save"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="30dip"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/xzfj"
+        android:layout_height="60dip"
+        android:layout_width="60dip"/>
+
+
+</RelativeLayout>
