--- a/sxxj/src/main/res/layout/app_sxxj_item.xml
+++ b/sxxj/src/main/res/layout/app_sxxj_item.xml
@@ -1,20 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:layout_height="60dip"
     android:padding="10dip"
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:background="@drawable/ripple_bg_while">
     <ImageView
         android:id="@+id/img"
         android:layout_width="40dip"
         android:src="@drawable/yue"
+        android:scaleType="fitXY"
         android:layout_height="40dip">
     </ImageView>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/image60"
-        android:layout_marginRight="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dip"
         android:layout_weight="1">
         <TextView
             android:id="@+id/riqi"
@@ -24,7 +26,7 @@
             android:maxLines="2"
             android:text="555555555555"
             android:textColor="#212121"
-            android:textSize="?attr/textSize14"
+            android:textSize="16sp"
             android:lineSpacingMultiplier="1.3"/>
 
         <TextView
@@ -32,23 +34,25 @@
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
             android:maxLines="2"
-            android:text="4444444444444"
+            android:text="4444444455544444"
             android:textColor="#212121"
             android:textSize="?attr/textSize14"
             android:lineSpacingMultiplier="1.3"/>
 
         <TextView
             android:id="@+id/lx"
+            android:gravity="bottom"
             android:layout_below="@id/riqi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:minWidth="100dp"
-            android:textColor="#9c9c9c"
             android:text="4444444444444"
-            android:textSize="?attr/textSize12"
-            android:layout_alignParentBottom="true"/>
+            android:textColor="#9c9c9c"
+            android:textSize="?attr/textSize12" />
     </RelativeLayout>
 
 
