--- a/sxxj/src/main/res/layout/app_sxxj_save.xml
+++ b/sxxj/src/main/res/layout/app_sxxj_save.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/red">
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:background="@color/bg">
 
     <include layout="@layout/core_title_back"></include>
     <ScrollView
@@ -30,7 +32,7 @@
             android:layout_weight="1"
             android:text="小结类型（必填）"
             android:textSize="15sp"
-            android:textColor="@color/black"
+            android:textColor="#353535"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -56,7 +58,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dip"
         android:gravity="center_vertical"
         android:background="@color/white">
 
@@ -64,14 +65,23 @@
         <TextView
             android:layout_weight="1"
             android:text="小结内容"
+            android:paddingLeft="10dip"
+            android:gravity="center_vertical"
             android:textSize="14sp"
-            android:textColor="@color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textColor="#353535"
+            android:layout_width="match_parent"
+            android:layout_height="40dip" />
 
-
+        <View
+            android:layout_marginLeft="10dip"
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="@color/bg" />
         <EditText
             android:id="@+id/xjnr"
+            android:paddingLeft="10dip"
+            android:paddingRight="10dip"
+            android:paddingBottom="10dip"
             android:layout_marginTop="10dip"
             android:minHeight="100dip"
             android:gravity="top"
@@ -79,8 +89,8 @@
             android:layout_marginRight="5dip"
             android:hint="请输入小结内容（必填）"
             android:textSize="12sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
 
 
@@ -92,28 +102,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dip"
+        android:paddingBottom="10dip"
         android:gravity="center_vertical"
         android:background="@color/white">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="10dip">
 
-        <TextView
-            android:layout_weight="1"
-            android:text="上传附件（选填）"
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="上传附件（选填）"
+                android:textColor="#353535"
+                android:textSize="14sp" />
 
-
-        <com.dk.mp.sxxj.widget.MyGridView
+            <TextView
+                android:id="@+id/add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:text="添加"
+                android:textColor="#2196F3"
+                android:textSize="14sp" />
+        </LinearLayout>
+        <View
+            android:layout_marginLeft="10dip"
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="@color/bg" />
+        <ListView
             style="@style/mylist"
             android:id="@+id/newslist"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:horizontalSpacing="0dip"
-            android:numColumns="4"
-            android:verticalSpacing="0dip"
             android:listSelector="@color/transparent"  />
 
 
@@ -123,15 +149,26 @@
 
             <Button
                 android:id="@+id/tj"
-                android:layout_marginTop="10dip"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="10dip"
+                android:layout_marginTop="20dip"
                 android:text="提交"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:background="@drawable/button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
 
 
             <Button
                 android:id="@+id/bc"
+                android:layout_marginTop="20dip"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="10dip"
                 android:text="保存草稿"
+                android:textSize="15sp"
+                android:background="@drawable/button_cg"
+                android:textColor="@color/black"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
 
